--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="500px" height="195px" scrolling=no src="//motdbe.blackbe.work/iframe.html?ip=mc.fapixel.com&port=19132&dark=false"></iframe>
     <h5>best hvh server</h5>
     <h5>sakura is bad anticheat, I can BYPASS it fly<h5>
+      <br>
+      <h5>This is something from the MC server of the Chajiyan version</h5>
+      <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="500px" height="195px" scrolling=no src="https://motdbe.blackbe.work/"></iframe>
   </body>
 </html>
